Mad e small changes (added to-do + 4 directors)

--- a/about.html
+++ b/about.html
@@ -62,8 +62,8 @@
                         </ul>
                     </div>
                     <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
-                        <a href="tel:+880 012 3654 896">+880 012 3654 896</a>
-                        <a href="mailto:support@colorlib.com">support@colorlib.com</a>
+                        <a href="tel:+033 6637 4090">+033 6637 4090</a>
+                        <a href="mailto:kol@sksl.in">kol@sksl.in</a>
                     </div>
                 </div>
             </div>
@@ -233,7 +233,9 @@
                                     class="lnr lnr-history"></span></span></a>
                         <h4 class="mb-20" style="margin-top: 23px;">Performance</h4>
                         <p>
-                            "Strive for excellence to deliver the highest quality on time. Lorem ipsum dolor sit amet,
+                            "Strive for excellence to deliver the highest quality on time.
+			    <!-- TO-DO -->
+ 			    Lorem ipsum dolor sit amet,
                             consectetur
                             adipisicing elit, sed do."
                         </p>
@@ -245,7 +247,7 @@
                                     class="lnr lnr-rocket"></span></span></a>
                         <h4 class="mt-40 mb-20">Innovation</h4>
                         <p>
-                            "Challenge the status quo Lorem ipsum dolor sit amet, consectetur
+ <!-- TO-DO -->                            "Challenge the status quo Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor incididunt."
                         </p>
                     </div>
@@ -256,7 +258,7 @@
                                     class="lnr lnr-eye"></span></span></a>
                         <h4 class="mt-40 mb-20">Integrity</h4>
                         <p>
-                            "Be transparent and celebrate authenticity Lorem ipsum dolor sit amet, consectetur
+ <!-- TO-DO -->                            "Be transparent and celebrate authenticity Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor incididunt."
                         </p>
                     </div>
@@ -267,7 +269,7 @@
                                     class="lnr lnr-users"></span></span></a>
                         <h4 class="mb-20" style="margin-top: 23px;">Accountability</h4>
                         <p>
-                            "Take ownership Lorem ipsum dolor sit amet, consectetur
+ <!-- TO-DO -->                            "Take ownership Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor incididunt ut labore et
                             dolore magna."
                         </p>
@@ -276,10 +278,10 @@
                 <div class="col-lg-4">
                     <div class="single-cat">
                         <a href="" class="hb-sm-margin mx-auto d-block"><span class="hb hb-sm inv hb-facebook-inv"><span
-                                    class="lnr lnr-paw"></span></span></a>
+                                    class="lnr lnr-briefcase"></span></span></a>
                         <h4 class="mt-40 mb-20">Loyalty</h4>
                         <p>
-                            "Be passionate for customer success Lorem ipsum dolor sit amet, consectetur
+ <!-- TO-DO -->                            "Be passionate for customer success Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor incididunt."
                         </p>
                     </div>
@@ -290,7 +292,7 @@
                                     class="lnr lnr-leaf"></span></span></a>
                         <h4 class="mt-40 mb-20">Social responsibility</h4>
                         <p>
-                            "Do the right thing, not just the easy thing Lorem ipsum dolor sit amet, consectetur
+ <!-- TO-DO -->                            "Do the right thing, not just the easy thing Lorem ipsum dolor sit amet, consectetur
                             adipisicing elit, sed do eiusmod tempor incididunt."
                         </p>
                     </div>
@@ -306,7 +308,7 @@
             <hr align="center" width="20%" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
             <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">DIVISIONS</h2>
             <p class="sub" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
-                Lorem ipsum dolor sit amet, consectetur dipisicing elit., sed do eiusmod tempor
+ <!-- TO-DO -->                Lorem ipsum dolor sit amet, consectetur dipisicing elit., sed do eiusmod tempor
                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim. sed do eiusmod tempor incididunt.
             </p>
             <div class="d-flex flex-row" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
@@ -332,7 +334,7 @@
                     <hr align="center" width="20%">
                     <h1>OUR MILESTONES</h1>
                     <p class="sub">
-                        Lorem ipsum dolor sit amet, consectetur
+ <!-- TO-DO -->                        Lorem ipsum dolor sit amet, consectetur
                         adipisicing elit., sed do eiusmod tempor incididunt ut labore et
                         dolore magna aliqua. Ut enim ad minim. sed do eiusmod tempor incididunt.
                     </p>
@@ -342,7 +344,7 @@
                             <span class="counter">41</span>
                             <h6>Projects</h6>
                             <p>
-                                With the new TMT Bar Mill, we have completed over 40 projects. Lorem ipsum dolor sit
+ <!-- TO-DO -->                                With the new TMT Bar Mill, we have completed over 40 projects. Lorem ipsum dolor sit
                                 amet, consectetur
                                 adipisicing elit, sed.
                             </p>
@@ -352,7 +354,7 @@
                             <span class="counter">36</span>
                             <h6>Years</h6>
                             <p>
-                                We started our business in executing EPC contracts in 1982. Lorem ipsum dolor sit amet,
+ <!-- TO-DO -->                                We started our business in executing EPC contracts in 1982. Lorem ipsum dolor sit amet,
                                 consectetur adipisicing
                                 elit, sed.
                             </p>
@@ -362,7 +364,7 @@
                             <span class="counter">387</span>
                             <h6>Employees</h6>
                             <p>
-                                With a humble start of 5 employees, we now have over 380 employees. Lorem ipsum dolor
+ <!-- TO-DO -->                                With a humble start of 5 employees, we now have over 380 employees. Lorem ipsum dolor
                                 sit amet, consectetur.
                             </p>
                         </div>
@@ -382,36 +384,48 @@
                     <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">OUR LEADERSHIP</h2>
                 </div>
                 <p class="sub" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
-                    Lorem ipsum dolor sit amet, consectetur
+ <!-- TO-DO -->                    Lorem ipsum dolor sit amet, consectetur
                     adipisicing elit., sed do eiusmod tempor incididunt ut labore et
                     dolore magna aliqua. Ut enim ad minim. sed do eiusmod tempor incididunt.
                 </p>
             </div>
 
             <div class="row" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="50">
-                <div class="col-md-4 text-center ">
+                <div class="col-md-3 text-center ">
                     <div class="staff staff-img" style="background-image: url(img/person1.jpg);">
-                        <a href="about.html#team"" class=" desc">
+                        <a href="about.html#team" class=" desc">
                             <h3>SHAKTI KR. SAMANTA</h3>
                             <span>FOUNDER</span>
                             <p>THINK | PLAN | PERFORM</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing
+<!-- TO-DO -->                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing
                                 elit.</p>
                         </a>
                     </div>
                 </div>
-                <div class="col-md-4 text-center ">
+                <div class="col-md-3 text-center ">
                     <div class="staff staff-img" style="background-image: url(img/person2.jpg);">
                         <a href="about.html#team" class="desc">
                             <h3>SUROJIT SAMANTA</h3>
                             <span>MANAGING DIRECTOR</span>
                             <p>PERSEVERANCE & INNOVATION</p>
+             <!-- to do -->
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing
                                 elit.</p>
                         </a>
                     </div>
                 </div>
-                <div class="col-md-4 text-center ">
+                <div class="col-md-3 text-center ">
+                    <div class="staff staff-img" style="background-image: url(img/person2.jpg);">
+                        <a href="about.html#team" class="desc">
+                            <h3>SUROJIT SAMANTA</h3>
+                            <span>MANAGING DIRECTOR</span>
+                            <p>PERSEVERANCE & INNOVATION</p>
+                                  <!-- TO-DO -->                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing
+                                elit.</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3 text-center ">
                     <div class="staff staff-img" style="background-image: url(img/person3.jpg);">
                         <a href="about.html#team" class="desc">
                             <h3>LEADER 2</h3>
@@ -433,7 +447,7 @@
             <div class="row d-flex align-items-center justify-content-center">
                 <h2>DOWNLOAD BROCHURE</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur dipisicing elit., sed do eiusmod tempor
+<!-- TO-DO -->                     Lorem ipsum dolor sit amet, consectetur dipisicing elit., sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim. sed do eiusmod tempor incididunt.
                 </p>
                 <button class="button1"><a class="links" href="brochures/SKSL.pdf" target="_blank">SKSL Company
@@ -477,7 +491,7 @@
                     <div class="single-footer-widget">
                         <h6>About the Company</h6>
                         <p>
-                            Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they
+<!-- TO-DO -->                             Far from the countries Vokalia and Consonantia, there live the blind texts. Separated they
                             live
                             in Bookmarksgrove right at the coast of the Semantics
                         </p>
