--- a/home.html
+++ b/home.html
@@ -62,8 +62,8 @@
                         </ul>
                     </div>
                     <div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
-                        <a href="tel:+880 012 3654 896">+880 012 3654 896</a>
-                        <a href="mailto:support@colorlib.com">support@colorlib.com</a>
+                        <a href="tel:+033 6637 4090">+033 6637 4090</a>
+                        <a href="mailto:kol@sksl.in">kol@sksl.in</a>
                     </div>
                 </div>
             </div>
@@ -171,7 +171,7 @@
 					</div>
                 </div>
         </section>
-        <section class="home-projects">
+        <section class=" home-projects">
                 <div class="row">
                     <div class="col-md-4" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <h1>WELCOME</h1>
@@ -197,92 +197,94 @@
 		
 
     <!-- Start footer Area -->
-    <footer class="
-                footer-area">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-6 col-sm-6">
-                            <div class="single-footer-widget">
-                                <h6>About the Company</h6>
-                                <p>
-                                    Far from the countries Vokalia and Consonantia, there live the blind texts.
-                                    Separated they
-                                    live
-                                    in Bookmarksgrove right at the coast of the Semantics
-                                </p>
-                                <div class="footer-social d-flex align-items-center">
-                                    <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-linkedin"></i></a>
+    <footer class=" footer-area">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-4 col-md-6 col-sm-6">
+                                    <div class="single-footer-widget">
+                                        <h6>About the Company</h6>
+                                        <p>
+                                            <!-- to do --> Far from the countries Vokalia and Consonantia, there live
+                                            the blind texts.
+                                            Separated they
+                                            live
+                                            in Bookmarksgrove right at the coast of the Semantics
+                                        </p>
+                                        <div class="footer-social d-flex align-items-center">
+                                            <a href="#"><i class="fa fa-facebook"></i></a>
+                                            <a href="#"><i class="fa fa-twitter"></i></a>
+                                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-6">
+                                    <div class="single-footer-widget align-items-center">
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-6">
+                                    <div class="single-footer-widget">
+                                        <h6>Contact Us</h6>
+                                        <p>
+                                            <i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;2/5
+                                            Sarat
+                                            Bose
+                                            Road,
+                                            Kolkata 700 020
+                                            <br />
+                                            <i class="fa fa-phone" aria-hidden="true"></i>&nbsp;&nbsp;(033) 6637 4090
+                                            <br />
+                                            <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;&nbsp;kol@sksl.in
+                                        </p>
+                                        <p class="footer-text">All rights reserved | <i class="fa fa-copyright"
+                                                aria-hidden="true"></i>
+                                            SKSLtechologies 2019
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="go-top">
+                                    <a class="smoothscroll" title="Back to Top" href="#home"><i class="fa fa-angle-up"
+                                            aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-6">
-                            <div class="single-footer-widget align-items-center">
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-6">
-                            <div class="single-footer-widget">
-                                <h6>Contact Us</h6>
-                                <p>
-                                    <i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;2/5 Sarat
-                                    Bose
-                                    Road,
-                                    Kolkata 700 020
-                                    <br />
-                                    <i class="fa fa-phone" aria-hidden="true"></i>&nbsp;&nbsp;(033) 6637 4090
-                                    <br />
-                                    <i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;&nbsp;kol@sksl.in
-                                </p>
-                                <p class="footer-text">All rights reserved | <i class="fa fa-copyright" aria-hidden="true"></i>
-                                    SKSL 2019
-                                </p>
-                            </div>
-                        </div>
-                        <div class="go-top">
-                            <a class="smoothscroll" title="Back to Top" href="#home"><i class="fa fa-angle-up"
-                                    aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                </div>
-                </footer>
+                        </footer>
 
 
 
 
-                <!-- End footer Area -->
+                        <!-- End footer Area -->
 
 
-                <!-- =================== JavaScript =================== -->
-                <!-- jQuery -->
-                <script src="js/jquery.min.js"></script>
-                <!-- jQuery Easing -->
-                <script src="js/easing.min.js"></script>
-                <!-- Bootstrap -->
-                <script src="js/bootstrap.min.js"></script>
-                <!-- Waypoints -->
-                <script src="js/waypoints.min.js"></script>
-                <!-- Superfish -->
-                <script src="js/superfish.min.js"></script>
-                <!-- Owl carousel -->
-                <script src="js/owl.carousel.min.js"></script>
-                <!-- Magnific Popup -->
-                <script src="js/jquery.magnific-popup.min.js"></script>
-                <script src="js/magnific-popup-options.js"></script>
-                <!-- Counters -->
-                <script src="js/jquery.countTo.js"></script>
-                <script src="js/jquery.counterup.min.js"></script>
-                <!-- Hexagon Buttons-->
-                <script src="js/hexagons.min.js"></script>
-                <!-- jQuery Nice Select -->
-                <script src="js/jquery.nice-select.min.js"></script>
-                <!-- AOS -->
-                <script src="js/plugins.js"></script>
-                <!-- AjaxChimp -->
-                <script src="js/jquery.ajaxchimp.min.js"></script>
-                <script src="js/mail-script.js"></script>
-                <!-- Main -->
-                <script src="js/main.js"></script>
+                        <!-- =================== JavaScript =================== -->
+                        <!-- jQuery -->
+                        <script src="js/jquery.min.js"></script>
+                        <!-- jQuery Easing -->
+                        <script src="js/easing.min.js"></script>
+                        <!-- Bootstrap -->
+                        <script src="js/bootstrap.min.js"></script>
+                        <!-- Waypoints -->
+                        <script src="js/waypoints.min.js"></script>
+                        <!-- Superfish -->
+                        <script src="js/superfish.min.js"></script>
+                        <!-- Owl carousel -->
+                        <script src="js/owl.carousel.min.js"></script>
+                        <!-- Magnific Popup -->
+                        <script src="js/jquery.magnific-popup.min.js"></script>
+                        <script src="js/magnific-popup-options.js"></script>
+                        <!-- Counters -->
+                        <script src="js/jquery.countTo.js"></script>
+                        <script src="js/jquery.counterup.min.js"></script>
+                        <!-- Hexagon Buttons-->
+                        <script src="js/hexagons.min.js"></script>
+                        <!-- jQuery Nice Select -->
+                        <script src="js/jquery.nice-select.min.js"></script>
+                        <!-- AOS -->
+                        <script src="js/plugins.js"></script>
+                        <!-- AjaxChimp -->
+                        <script src="js/jquery.ajaxchimp.min.js"></script>
+                        <script src="js/mail-script.js"></script>
+                        <!-- Main -->
+                        <script src="js/main.js"></script>
 
 
 </body>
